# flash-agent

./: .gitignore  Dockerfile  README.md  deploy.sh  lambda_function.py  pyproject.toml  requirements.txt
flash_agent/agent/: async_agent.py  test.py
flash_agent/commons/: learning_material.py  prompt.py  request.py  utils.py
flash_agent/poc/: poc.ipynb
flash_agent/prompts/: core_apis.txt  core_concepts.txt  onboarding.txt  real_life_examples.txt  small_runnable_example.txt  validate.txt  with_and_without.txt
